--- a/Module-2-Solution/indexAssCSS.css
+++ b/Module-2-Solution/indexAssCSS.css
@@ -31,6 +31,7 @@ span{
     color: #101820FF;
     padding: 3px;
     border: 2px solid black;
+    float: right;
 }
 span:hover{
     -webkit-text-fill-color: transparent;
